fixed spacing of paragraph
set a fixed height for anecdote paragraph to avoid button shifting based on anecdote length for smaller viewports

--- a/part-1/anecdotes/src/App.css
+++ b/part-1/anecdotes/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
-.text {
+.container {
+  display: block;
+}
+
+.anecdote {
   height: 50px;
 }
